--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-API_KEY="" # insert your api key
+API_KEY="" # для безопасности уберу свой ключ
 LOCATION_URL="http://dataservice.accuweather.com/locations/v1/cities/search"
 WEATHER_URL="http://dataservice.accuweather.com/forecasts/v1/daily"
