--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-API_KEY="D5pG0rPGIea809UTDR6cS8j4TXVwCGFM" # для безопасности уберу свой ключ
+API_KEY="" # для безопасности уберу свой ключ
 LOCATION_URL="http://dataservice.accuweather.com/locations/v1/cities/search"
 WEATHER_URL="http://dataservice.accuweather.com/forecasts/v1/daily"
